--- a/partial-files/_global.scss
+++ b/partial-files/_global.scss
@@ -24,3 +24,18 @@ section{
 .font-bold{
     font-weight: bold;
 }
+
+
+//  text properties
+
+
+.uppercase
+{
+    text-transform: uppercase;
+}
+.lowercase{
+    text-transform: lowercase;
+}
+.capitalize{
+    text-transform: capitalize;
+}
