--- a/partial-files/components/_auto_slider.scss
+++ b/partial-files/components/_auto_slider.scss
@@ -45,9 +45,9 @@
     transition: background-color 0.6s ease;
   }
   
-  .active, .dot:hover {
-    background-color: #717171;
-  }
+  // .active, .dot:hover {
+  //   background-color: #717171;
+  // }
   
   /* Fading animation */
   .fade1 {
