--- a/partial-files/_defaults.scss
+++ b/partial-files/_defaults.scss
@@ -26,10 +26,25 @@ img{
     max-width: 100%;
 }
 
-.fixed{
+.fixed-top-left{
     position: fixed;
     top: 0;
     left: 0;
+}
+.fixed-top-right{
+    position: fixed;
+    top: 0;
+    right:0;
+}
+.fixed-bottom-left{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+.fixed-bottom-right{
+    position: fixed;
+    bottom: 0;
+    right: 0;
 }
 
 .deskBlock{
