--- a/partial-files/_media_queries.scss
+++ b/partial-files/_media_queries.scss
@@ -13,16 +13,14 @@
         .banner-form-part{
             max-width: 25vw;
             position: absolute;
-            top: 0 ;
-            right: 0 ;
-            margin: 4rem;
+            top: 0rem ;
+            right: 0rem ;
         }
         .banner-offer-part{
             max-width: 25vw;
             position: absolute;
             top: 0 ;
             left: 0 ;
-            margin: 4rem;
         }
     }
     .modal-content-form-icon{
