--- a/partial-files/templates/1.4to2.5Cr/_temp3_theme-floor.scss
+++ b/partial-files/templates/1.4to2.5Cr/_temp3_theme-floor.scss
@@ -1,4 +1,4 @@
-.floor-type-1{
+.temp3-floor-type-1{
     .floor-card{
         background: rgba(255, 255, 255, 0.9);
         border: 0.1rem solid #999999;
