--- a/partial-files/templates/1.4to2.5Cr/_temp3_theme-highlights.scss
+++ b/partial-files/templates/1.4to2.5Cr/_temp3_theme-highlights.scss
@@ -1,4 +1,4 @@
-.highlights-type-1{
+.temp3-highlights-type-1{
     .highlights-section{
         .high-card-container{
             display: grid;
@@ -24,7 +24,7 @@
 }
 
 @media (max-width:768px) {
-    .highlights-type-1{
+    .temp3-highlights-type-1{
         .highlights-section{
             ul{
                 grid-template-columns: 1fr;
