--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,18 +57,28 @@
 
 
 //templates start
-@import '../partial-files/templates/1.4to2.5Cr/theme1';
-@import '../partial-files/templates/1.4to2.5Cr/theme-title';
-@import '../partial-files/templates/1.4to2.5Cr/theme-navbar';
-@import '../partial-files/templates/1.4to2.5Cr/theme-banner';
-@import '../partial-files/templates/1.4to2.5Cr/theme_overview';
-@import '../partial-files/templates/1.4to2.5Cr/theme-highlights';
-@import '../partial-files/templates/1.4to2.5Cr/theme-cta';
-@import '../partial-files/templates/1.4to2.5Cr/theme-amenities';
-@import '../partial-files/templates/1.4to2.5Cr/theme-floor';
-@import '../partial-files/templates/1.4to2.5Cr/theme-location';
-@import '../partial-files/templates/1.4to2.5Cr/theme-price';
-@import '../partial-files/templates/1.4to2.5Cr/theme-footer';
+// 1.4 to 2.5 cr template
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme1';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme-title';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme-navbar';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme-banner';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme_overview';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme-highlights';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme-cta';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme-amenities';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme-floor';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme-location';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme-price';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme-footer';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme-social';
+
+// 40 to 80 L template
+@import '../partial-files/templates/40to80L/temp1_theme1';
+@import '../partial-files/templates/40to80L/temp1_theme-banner';
+@import '../partial-files/templates/40to80L/temp1-theme1-btn';
+@import '../partial-files/templates/40to80L/temp1_theme1-title';
+@import '../partial-files/templates/40to80L/temp1_theme-card';
+@import '../partial-files/templates/40to80L/temp1_theme1-social';
 
 @import '../partial-files/media_queries';
 
