--- a/partial-files/templates/1.4to2.5Cr/_temp3_theme-banner.scss
+++ b/partial-files/templates/1.4to2.5Cr/_temp3_theme-banner.scss
@@ -1,12 +1,12 @@
 // banner type 1
-.banner-type-1{
+.temp3-banner-type-1{
     .banner-section{
         .banner-img{
-            background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../../../img/gallery/g2.webp');
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../../../img/gallery/g1.webp');
             background-repeat: no-repeat;
             background-size: cover;
             width: 100%;
-            height: 100vh;
+            height: 100vh; 
         }
         .banner-form-part{
             top: 12rem!important;
@@ -29,7 +29,7 @@
 }
 
 @media (max-width:768px) {
-    .banner-type-1{
+    .temp3-banner-type-1{
         .banner-section{
             .banner-form-part{
                 background: rgba(0, 0, 0, 1);
