--- a/templates/1.4to2.5Cr.html
+++ b/templates/1.4to2.5Cr.html
@@ -13,7 +13,7 @@
      <!-- navbar section start -->
      <h3 class="font-xl text-center text-primary mt-3 mb-1">NAVBAR TYPES</h3>
      <!-- navbar type 1   -->
-     <div class="navbar-type-1">
+     <div class="temp3-navbar-type-1">
         <div class="responsive-navbar bg-gray-light-9 ">
             <div class="container">
                 <div class="navbar-content">
@@ -55,13 +55,13 @@
     <!-- banner section start -->
     <h3 class="font-xl text-center text-primary mt-3 mb-1">BANNER TYPES</h3>
     <!-- banner-type 1 -->
-    <div class="banner-type-1">
+    <div class="temp3-banner-type-1">
     <div class="banner-section">
         <!-- banner image -->
         <div class="banner-img">
         </div>
 
-        <div class="banner-text-part ml-4">
+        <div class="banner-text-part ml-2">
             <h1 class="font-xxl text-white mb-1">Launching World-Class Luxury Apartment, Office  In Mumbai</h1>
             <p class="font-lg text-white">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested</p>
         </div>
@@ -91,17 +91,9 @@
       <!-- overview section start -->
       <h3 class="font-xl text-center text-primary mt-3 mb-1">OVERVIEW TYPES</h3>
     <!-- overview-type 1 -->
-      <div class="overview-type-1">
+      <div class="temp3-overview-type-1">
       <section class="overview-section" id="overview">
         <div class="container">
-         <div class="main-title">
-             <div class="main-title-content">
-                 <p class="text-left">Project Details</p>
-             </div>
-             <div class="main-title-head">
-                 <h2 class="text-left">Vasant Lawns Thane West</h2>
-             </div>
-         </div>
          <div class="overview-content">
              <div class="row gap-2">
                  <div class="col-md-6 col-xs-12">
@@ -130,17 +122,9 @@
       <!-- highlights section start -->
       <h3 class="font-xl text-center text-primary mt-3 mb-1">HIGHLIGHTS TYPES</h3>
       <!-- highlights-type 1 -->
-      <div class="highlights-type-1">
+      <div class="temp3-highlights-type-1">
       <section class="highlights-section" id="highlights">
         <div class="container">
-         <div class="main-title">
-             <div class="main-title-content">
-                 <p class="text-left">Highlights</p>
-             </div>
-             <div class="main-title-head">
-                 <h2 class="text-left">Vasant Lawns Thane West</h2>
-             </div>
-         </div>
          <div class="highlights-content">
              <div class="row gap-2">
                 <div class="col-md-6 col-xs-12">
@@ -189,14 +173,14 @@
        <!-- cta section start -->
        <h3 class="font-xl text-center text-primary mt-3 mb-1">CTA TYPES</h3>
       <!-- cta-type 1 -->
-       <div class="cta-type-1">
+       <div class="temp3-cta-type-1">
        <section class="cta-section" id="cta">
         <div class="container">
          <div class="cta-content p-4">
              <div class="row gap-2">
                  <div class="col-md-6 col-xs-12">
-                    <div class="mt-3">
-                        <h3 class="font-xxl text-white font-bold">
+                    <div class="cta-content-part">
+                        <h3 class="font-xxl text-white font-bold text-center">
                             REQUEST OFFICE / HOME / VIDEO PRESENTATION BY, Vasant Lawns Thane West 
                         </h3>
                          <button class="btn-sharp-white font-lg text-black mt-2" data-open-modal="video_call">Enquire Now</button>
@@ -207,7 +191,7 @@
                         <div class="cta-img" data-open-modal="video_call">
                             <span class="icon-play_arrow text-white font-xxl p-2"></span>
                         </div>
-                        <p class="text-white text-center font-lg">WATCH THE VIDEO</p>
+                        <p class="text-white text-center font-lg mt-1">WATCH THE VIDEO</p>
                     </div>
                 </div>
              </div>
@@ -220,110 +204,102 @@
        <!-- amenities section start -->
        <h3 class="font-xl text-center text-primary mt-3 mb-1">AMENITIES TYPES</h3>
        <!-- amenities-type 1 -->
-       <div class="amenities-type-1">
+       <div class="temp3-amenities-type-1">
        <section class="amenities-section pt-4 pb-3" id="amenities">
         <div class="container">
-         <div class="main-title text-white">
-             <div class="main-title-content">
-                 <p class="text-left">Amenities</p>
-             </div>
-             <div class="main-title-head">
-                 <h2 class="text-left">Vasant Lawns Thane West</h2>
-             </div>
-         </div>
          <div class="amenities-content mt-3">
-             <div class="row gap-2">
-                 <div class="col-md-2 col-xs-6">
-                    <div class="amenities-icon mb-3">
-                        <span class="icon-pool text-white font-xxl text-center p-1"></span>
-                        <div class="amenities-separator pt-1 pb-1">
-                            <div class="vertical-dotted"></div>
-                           <div class="horizontal-line"></div>
-                        </div>
-                        <p class="text-white">Swimming Pool</p>
-                    </div>
-                 </div>
-                 <div class="col-md-2 col-xs-6">
-                    <div class="amenities-icon mb-3">
-                        <span class="icon-toys text-white font-xxl text-center p-1"></span>
-                        <div class="amenities-separator pt-1 pb-1">
-                            <div class="vertical-dotted"></div>
-                           <div class="horizontal-line"></div>
-                        </div>
-                        <p class="text-white">Children’s Pool</p>
-                    </div>
-                 </div>
-                 <div class="col-md-2 col-xs-6">
-                    <div class="amenities-icon mb-3">
-                        <span class="icon-travel-walk text-white font-xxl text-center p-1"></span>
-                        <div class="amenities-separator pt-1 pb-1">
-                            <div class="vertical-dotted"></div>
-                           <div class="horizontal-line"></div>
-                        </div>
-                        <p class="text-white">Walking & Jogging Track</p>
-                    </div>
-                 </div>
-                 <div class="col-md-2 col-xs-6">
-                    <div class="amenities-icon mb-3">
-                        <span class="icon-travel-walk text-white font-xxl text-center p-1"></span>
-                        <div class="amenities-separator pt-1 pb-1">
-                            <div class="vertical-dotted"></div>
-                           <div class="horizontal-line"></div>
-                        </div>
-                        <p class="text-white">Senior Citizens Zone</p>
-                    </div>
-                 </div>
-                 <div class="col-md-2 col-xs-6">
-                    <div class="amenities-icon mb-3">
-                        <span class="icon-tennis-racket text-white font-xxl text-center p-1"></span>
-                        <div class="amenities-separator pt-1 pb-1">
-                            <div class="vertical-dotted"></div>
-                           <div class="horizontal-line"></div>
-                        </div>
-                        <p class="text-white">Badminton Court</p>
-                    </div>
-                 </div>
-                 <div class="col-md-2 col-xs-6">
-                    <div class="amenities-icon mb-3">
-                        <span class="icon-gamepad1 text-white font-xxl text-center p-1"></span>
-                        <div class="amenities-separator pt-1 pb-1">
-                            <div class="vertical-dotted"></div>
-                           <div class="horizontal-line"></div>
-                        </div>
-                        <p class="text-white">Indoor Games Zone</p>
-                    </div>
-                 </div>
-                 <div class="col-md-2 col-xs-6">
-                    <div class="amenities-icon mb-3">
-                        <span class="icon-weights1 text-white font-xxl text-center p-1"></span>
-                        <div class="amenities-separator pt-1 pb-1">
-                            <div class="vertical-dotted"></div>
-                           <div class="horizontal-line"></div>
-                        </div>
-                        <p class="text-white">Gymnasium </p>
-                    </div>
-                 </div>
-                 <div class="col-md-2 col-xs-6">
-                    <div class="amenities-icon mb-3">
-                        <span class="icon-flower text-white font-xxl text-center p-1"></span>
-                        <div class="amenities-separator pt-1 pb-1">
-                            <div class="vertical-dotted"></div>
-                           <div class="horizontal-line"></div>
-                        </div>
-                        <p class="text-white">Green Open Spaces</p>
-                    </div>
-                 </div>
-                 <div class="col-md-2 col-xs-6">
-                    <div class="amenities-icon mb-3">
-                        <span class="icon-festival text-white font-xxl text-center p-1"></span>
-                        <div class="amenities-separator pt-1 pb-1">
-                            <div class="vertical-dotted"></div>
-                           <div class="horizontal-line"></div>
-                        </div>
-                        <p class="text-white">Clubhouse</p>
-                    </div>
-                 </div>
-             </div>
+            <div class="row gap-2">
+                <div class="col-md-2 col-xs-6">
+                   <div class="amenities-icon mb-3">
+                       <span class="icon-pool text-white font-xxl text-center p-1"></span>
+                       <div class="amenities-separator pt-1 pb-1">
+                           <div class="vertical-dotted"></div>
+                          <div class="horizontal-line"></div>
+                       </div>
+                       <p class="text-center text-white">Swimming Pool</p>
+                   </div>
+                </div>
+                <div class="col-md-2 col-xs-6">
+                   <div class="amenities-icon mb-3">
+                       <span class="icon-toys text-white font-xxl text-center p-1"></span>
+                       <div class="amenities-separator pt-1 pb-1">
+                           <div class="vertical-dotted"></div>
+                          <div class="horizontal-line"></div>
+                       </div>
+                       <p class="text-center text-white">Children’s Pool</p>
+                   </div>
+                </div>
+                <div class="col-md-2 col-xs-6">
+                   <div class="amenities-icon mb-3">
+                       <span class="icon-travel-walk text-white font-xxl text-center p-1"></span>
+                       <div class="amenities-separator pt-1 pb-1">
+                           <div class="vertical-dotted"></div>
+                          <div class="horizontal-line"></div>
+                       </div>
+                       <p class="text-center text-white">Walking & Jogging Track</p>
+                   </div>
+                </div>
+                <div class="col-md-2 col-xs-6">
+                   <div class="amenities-icon mb-3">
+                       <span class="icon-travel-walk text-white font-xxl text-center p-1"></span>
+                       <div class="amenities-separator pt-1 pb-1">
+                           <div class="vertical-dotted"></div>
+                          <div class="horizontal-line"></div>
+                       </div>
+                       <p class="text-center text-white">Senior Citizens Zone</p>
+                   </div>
+                </div>
+                <div class="col-md-2 col-xs-6">
+                   <div class="amenities-icon mb-3">
+                       <span class="icon-tennis-racket text-white font-xxl text-center p-1"></span>
+                       <div class="amenities-separator pt-1 pb-1">
+                           <div class="vertical-dotted"></div>
+                          <div class="horizontal-line"></div>
+                       </div>
+                       <p class="text-center text-white">Badminton Court</p>
+                   </div>
+                </div>
+                <div class="col-md-2 col-xs-6">
+                   <div class="amenities-icon mb-3">
+                       <span class="icon-gamepad1 text-white font-xxl text-center p-1"></span>
+                       <div class="amenities-separator pt-1 pb-1">
+                           <div class="vertical-dotted"></div>
+                          <div class="horizontal-line"></div>
+                       </div>
+                       <p class="text-center text-white">Indoor Games Zone</p>
+                   </div>
+                </div>
+                <div class="col-md-2 col-xs-6">
+                   <div class="amenities-icon mb-3">
+                       <span class="icon-weights1 text-white font-xxl text-center p-1"></span>
+                       <div class="amenities-separator pt-1 pb-1">
+                           <div class="vertical-dotted"></div>
+                          <div class="horizontal-line"></div>
+                       </div>
+                       <p class="text-center text-white">Gymnasium </p>
+                   </div>
+                </div>
+                <div class="col-md-2 col-xs-6">
+                   <div class="amenities-icon mb-3">
+                       <span class="icon-flower text-white font-xxl text-center p-1"></span>
+                       <div class="amenities-separator pt-1 pb-1">
+                           <div class="vertical-dotted"></div>
+                          <div class="horizontal-line"></div>
+                       </div>
+                       <p class="text-center text-white">Green Open Spaces</p>
+                   </div>
+                </div>
+                <div class="col-md-2 col-xs-6">
+                   <div class="amenities-icon mb-3">
+                       <span class="icon-festival text-white font-xxl text-center p-1"></span>
+                       <div class="amenities-separator pt-1 pb-1">
+                           <div class="vertical-dotted"></div>
+                          <div class="horizontal-line"></div>
+                       </div>
+                       <p class="text-center text-white">Clubhouse</p>
+                   </div>
+                </div>
+            </div>
          </div>
         </div>
     </section>
@@ -333,17 +309,9 @@
       <!-- price section start -->
       <h3 class="font-xl text-center text-primary mt-3 mb-1">PRICE PLAN TYPES</h3>
       <!-- price-type 1 -->
-      <div class="price-type-1">
+      <div class="temp3-price-type-1">
       <section class="price-section" id="price">
         <div class="container">
-         <div class="main-title">
-             <div class="main-title-content">
-                 <p class="text-left">Price Plan</p>
-             </div>
-             <div class="main-title-head">
-                 <h2 class="text-left">Vasant Lawns Thane West</h2>
-             </div>
-         </div>
          <div class="price-content">
              <div class="row gap-2">
                 <div class="col-md-4 col-xs-12">
@@ -431,17 +399,9 @@
        <!-- floorplan section start -->
        <h3 class="font-xl text-center text-primary mt-3 mb-1">FLOOR PLAN TYPES</h3>
       <!-- floor-type 1 -->
-       <div class="floor-type-1">
+       <div class="temp3-floor-type-1">
        <section class="floorplan-section" id="floorplan">
         <div class="container">
-         <div class="main-title">
-             <div class="main-title-content">
-                 <p class="text-left">Floor Plan</p>
-             </div>
-             <div class="main-title-head">
-                 <h2 class="text-left">Vasant Lawns Thane West</h2>
-             </div>
-         </div>
          <div class="floorplan-content">
             <div class="row gap-2">
                 <div class="col-md-4 col-xs-12">
@@ -491,7 +451,7 @@
     <!-- gallery section start -->
     <h3 class="font-xl text-center text-primary mt-3 mb-1">GALLERY TYPES</h3>
     <!-- gallery-type 1 -->
-    <div class="gallery-type-1">
+    <div class="temp3-gallery-type-1">
 
     </div>
       <!-- gallery section end -->
@@ -499,17 +459,9 @@
     <!-- location section start -->
     <h3 class="font-xl text-center text-primary mt-3 mb-1">LOCATION TYPES</h3>
     <!-- location-type 1 -->
-    <div class="loaction-type-1">
+    <div class="temp3-loaction-type-1">
         <section class="location-section" id="location">
             <div class="container">
-             <div class="main-title">
-                 <div class="main-title-content">
-                     <p class="text-left">Location</p>
-                 </div>
-                 <div class="main-title-head">
-                     <h2 class="text-left">Vasant Lawns Thane West</h2>
-                 </div>
-             </div>
              <div class="location-content">
                  <div class="row gap-2">
                     <div class="col-md-6 col-xs-12">
@@ -601,7 +553,7 @@
     <!-- footer section start -->
     <h3 class="font-xl text-center text-primary mt-3 mb-1">FOOTER TYPES</h3>
     <!-- footer-type 1 -->
-    <div class="footer-type-1">
+    <div class="temp3-footer-type-1">
     <div class="footer-section pt-3 pb-3 text-white" id="footer">
         <div class="container">
          <div class="footer-content">
@@ -620,6 +572,35 @@
     </div>
      <!-- footer section end -->
 
+     <!-- social button section start -->
+     <h3 class="font-xl text-center text-primary mt-3 mb-1">SOCIAL BUTTONS TYPES</h3>
+     <!-- footer-type 1 -->
+     <div class="temp3-social-type-1">
+        <div class="social-section">
+            <div class="call">
+                <a href="" class="font-lg text-white btn-sharp"><span class="icon-phone_in_talk mr-1 font-xl"></span> Call Now</a>
+            </div>
+            <div class="whatsapp">
+                <a href="" class="font-lg text-white btn-sharp-green">Lets Chat <span class="icon-whatsapp ml-1 font-xl"></span></a>
+            </div>
+        </div>
+     </div>
+    <!-- social button section end -->
+
+         <!-- title section start -->
+         <h3 class="font-xl text-center text-primary mt-3 mb-1">TITLES TYPES</h3>
+         <!-- footer-type 1 -->
+         <div class="temp3-title-type-1">
+            <div class="main-title">
+                <div class="main-title-content">
+                    <p class="text-left">Location</p>
+                </div>
+                <div class="main-title-head">
+                    <h2 class="text-left">Vasant Lawns Thane West</h2>
+                </div>
+            </div>
+         </div>
+        <!-- title section end -->
 
 
     </div>
