--- a/partial-files/templates/1.4to2.5Cr/_temp3_theme-location.scss
+++ b/partial-files/templates/1.4to2.5Cr/_temp3_theme-location.scss
@@ -8,7 +8,7 @@
             .nav-tabs{
                 li.active {
                     a{
-                        background-color: white;
+                        background: white!important;
                     }
                 }
             }
