--- a/scss/style.scss
+++ b/scss/style.scss
@@ -69,14 +69,16 @@
 @import '../partial-files/templates/1.4to2.5Cr/temp3_theme-floor';
 @import '../partial-files/templates/1.4to2.5Cr/temp3_theme-location';
 @import '../partial-files/templates/1.4to2.5Cr/temp3_theme-price';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme1_gallery';
 @import '../partial-files/templates/1.4to2.5Cr/temp3_theme-footer';
 @import '../partial-files/templates/1.4to2.5Cr/temp3_theme-social';
+@import '../partial-files/templates/1.4to2.5Cr/temp3_theme_form';
 
 // 40 to 80 L template
 @import '../partial-files/templates/40to80L/temp1_theme1';
 @import '../partial-files/templates/40to80L/temp1_theme-banner';
 @import '../partial-files/templates/40to80L/temp1-theme1-btn';
-@import '../partial-files/templates/40to80L/temp1_theme1-title';
+@import '../partial-files/templates/40to80L/temp1_theme1-title'; 
 @import '../partial-files/templates/40to80L/temp1_theme-card';
 @import '../partial-files/templates/40to80L/temp1_theme1-social';
 
