--- a/partial-files/templates/1.4to2.5Cr/_temp3_theme-amenities.scss
+++ b/partial-files/templates/1.4to2.5Cr/_temp3_theme-amenities.scss
@@ -7,25 +7,8 @@
             justify-content: center;
             align-items: center;
             transition: all 2s;
-            .amenities-separator{
-                .vertical-dotted{
-                    height: 2.5rem;
-                    border-left: 0.1rem dotted white;
-                    margin-left: 1.2rem;
-                }
-                .horizontal-line{
-                    border-bottom: 0.2rem solid white;
-                    width: 2.4rem;
-                }
-            }
-            p{
-                text-transform: uppercase;
-            }
-        }
-        .amenities-icon:hover{
             span{
-                color: $text-theme;
-                border: 0.1px solid $text-theme;
+                border: 0.1rem solid transparent;
             }
             .amenities-separator{
                 .vertical-dotted{
@@ -39,7 +22,24 @@
                 }
             }
             p{
+                text-transform: uppercase;
+            }
+        }
+        .amenities-icon:hover{
+            span{
                 color: $text-theme;
+                border: 0.1rem solid $text-theme;
+            }
+            .amenities-separator{
+                .vertical-dotted{
+                    height: 2.5rem;
+                    border-left: 0.1rem dotted $text-theme;
+                    margin-left: 1.2rem;
+                }
+                .horizontal-line{
+                    border-bottom: 0.2rem solid $text-theme;
+                    width: 2.4rem;
+                }
             }
         }
         
