--- a/partial-files/templates/40to80L/_temp1_theme-banner.scss
+++ b/partial-files/templates/40to80L/_temp1_theme-banner.scss
@@ -1,3 +1,4 @@
+.temp1-banner-type-1{
 .banner-section .banner-form-part {
     box-shadow: 10px 10px 20px rgb(0 0 0 / 30%);
     z-index: 99;
@@ -100,4 +101,6 @@
     flex-direction: column;
     background-color: #fff;
     padding: 20px 0;
+}
+
 }
